--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "basic-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.6",
     "app-root-path": "3.0.0",
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "1.19.0",
     "dotenv": "10.0.0",
@@ -23,6 +24,7 @@
     "multer": "1.4.3",
     "mysql2": "2.3.0",
     "nodemon": "2.0.12",
+    "request": "^2.88.2",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
