--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
         "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
         "react-router": "^5.2.0",
         "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.29.0",
         "react-toastify": "8.0.2",
         "reactstrap": "^8.9.0",
         "redux": "4.1.1",
@@ -30,6 +32,7 @@
         "redux-state-sync": "^2.1.0",
         "redux-thunk": "^2.3.0",
         "sass": "^1.60.0",
+        "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
