--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "0.21.4",
         "bootstrap": "^5.0.1",
+        "ckeditor4-react": "^4.2.0",
         "lodash": "^4.17.21",
         "moment": "^2.29.0",
         "node-sass": "^6.0.0",
