--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "axios": "0.21.4",
         "bootstrap": "^5.0.1",
         "ckeditor4-react": "^4.2.0",
+        "cross-env": "^7.0.3",
         "lodash": "^4.17.21",
         "moment": "^2.29.0",
         "node-sass": "^6.0.0",
@@ -19,10 +20,12 @@
         "react-autosuggest": "^10.1.0",
         "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
+        "react-paginate": "^8.2.0",
         "react-redux": "8.0.5",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
+        "react-select": "^5.7.4",
         "react-slick": "^0.29.0",
         "react-toastify": "8.0.2",
         "reactstrap": "^8.9.0",
